[REFACTOR] Reindent all files